@@ -4,18 +4,19 @@ namespace Tests\Unit\Jobs;
 
 use Carbon\Carbon;
 use Tests\TestCase;
-use App\Mail\NotificationEmail;
+use Illuminate\Support\Facades\Bus;
 use Illuminate\Support\Facades\Mail;
-use App\Jobs\Notification\SendNotificationEmail;
+use App\Jobs\Notification\ScheduleNotification;
 use Illuminate\Foundation\Testing\DatabaseTransactions;
 
-class SendNotificationEmailTest extends TestCase
+class ScheduleNotificationTest extends TestCase
 {
     use DatabaseTransactions;
 
-    public function test_it_sends_a_reminder_email_and_delete_the_notification()
+    public function test_it_dispatches_an_email_and_deletes_the_notification()
     {
         Mail::fake();
+        Bus::fake();
 
         Carbon::setTestNow(Carbon::create(2017, 1, 1, 7, 0, 0));
 
@@ -36,17 +37,11 @@ class SendNotificationEmailTest extends TestCase
             'account_id' => $account->id,
             'contact_id' => $contact->id,
             'reminder_id' => $reminder->id,
-            'delete_after_number_of_emails_sent' => 1,
+            'trigger_date' => '2017-01-01',
         ]);
 
-        dispatch(new SendNotificationEmail($notification, $user));
+        dispatch(new ScheduleNotification($notification));
 
-        Mail::assertSent(NotificationEmail::class, function ($mail) {
-            return $mail->hasTo('john@doe.com');
-        });
-
-        $this->assertDatabaseMissing('notifications', [
-            'id' => $notification->id,
-        ]);
+        Bus::assertDispatched(ScheduleNotification::class);
     }
 }
